// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingIndicator /> with props renders correctly 1`] = `
<div
  className="LoadingIndicator LoadingIndicator-inline"
>
  <svg
    className=""
    height="80px"
    version="1.1"
    viewBox="0 0 50 50"
    width="80px"
    x="0px"
    xmlSpace="preserve"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
    y="0px"
  >
    <path
      d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z"
      fill="#FF6700"
    >
      <animateTransform
        attributeName="transform"
        attributeType="xml"
        dur="0.6s"
        from="0 25 25"
        repeatCount="indefinite"
        to="360 25 25"
        type="rotate"
      />
    </path>
  </svg>
</div>
`;

exports[`<LoadingIndicator /> without any props renders correctly 1`] = `
<div
  className="LoadingIndicator LoadingIndicator-block"
>
  <svg
    className=""
    height="40px"
    version="1.1"
    viewBox="0 0 50 50"
    width="40px"
    x="0px"
    xmlSpace="preserve"
    xmlns="http://www.w3.org/2000/svg"
    xmlnsXlink="http://www.w3.org/1999/xlink"
    y="0px"
  >
    <path
      d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z"
      fill="#FF6700"
    >
      <animateTransform
        attributeName="transform"
        attributeType="xml"
        dur="0.6s"
        from="0 25 25"
        repeatCount="indefinite"
        to="360 25 25"
        type="rotate"
      />
    </path>
  </svg>
</div>
`;
